Changed filtering transaction and transaction_category; Changed validation in TransactionCreateSerializer; Changed getting top categories; Fix codestyle.
